// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchText element negative 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoMatchText[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m\\"not-existing\\"[39m
Received: [31m\\"zzzBarzzz\\"[39m"
`;

exports[`toMatchText page negative 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoMatchText[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m\\"not-existing\\"[39m
Received: [31m\\"zzzBarzzz\\"[39m"
`;

exports[`toMatchText selector negative 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoMatchText[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m/[b]ar/[39m
Received: [31m\\"zzzBarzzz\\"[39m"
`;

exports[`toMatchText selector timeout should throw an error after the timeout exceeds 1`] = `"Error: Timeout exceed for element '#foobar'"`;

exports[`toMatchText selector with 'not' usage negative 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoMatchText[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m/not-existing/[39m
Received: [31m\\"zzzBarzzz\\"[39m"
`;
